# curso_fast_api

./: .gitignore  Insomnia-All_2023-03-26.json  README.md
fastApiProject/: pyproject.toml
secao_02/: main.py  pyproject.toml
secao_03/: main.py  models.py  pyproject.toml
secao_03_p2/: main.py  pyproject.toml
secao_03_p2/routes/: curso_router.py  usuario_router.py
secao_04/: create_tables.py  main.py  pyproject.toml
secao_04/api/v1/: api.py
secao_04/api/v1/endpoints/: curso.py
secao_04/core/: configs.py  database.py
secao_04/models/: curso_model.py
secao_04/schemas/: curso_schema.py
secao_05/: create_tables.py  main.py  pyproject.toml
secao_05/api/v1/: api.py
secao_05/api/v1/endpoints/: curso.py
secao_05/core/: configs.py  database.py  deps.py
secao_05/models/: curso_model.py
secao_06/: create_tables.py  main.py  pyproject.toml  requirements.txt
secao_06/api/v1/: api.py
secao_06/api/v1/endpoints/: artigo.py  usuario.py
secao_06/core/: auth.py  configs.py  database.py  deps.py  security.py
secao_06/models/: artigo_model.py  usuario_model.py
secao_06/schemas/: artigo_schema.py  usuario_schema.py
