[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Mateus Cabral <jmateuscabral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
