[tool.poetry]
name = "secao-06"
version = "0.1.0"
description = ""
authors = ["Mateus Cabral <jmateuscabral@gmail.com>"]
readme = "README.md"
packages = [{include = "secao_06"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
cryptography = "^40.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
